--- a/Phone/main/res/layout/register_create_password.xml
+++ b/Phone/main/res/layout/register_create_password.xml
@@ -205,9 +205,9 @@
     	    android:layout_height="100dp"
     	    android:layout_below="@+id/account_info_two_submit_button" >
     	    
-    	    <include layout="@layout/need_help_footer"/>
+    	    <include layout="@layout/old_general_need_help_footer" />
 
-   			<include layout="@layout/copyright_footer"/>
+   			<include layout="@layout/old_general_copyright_footer" />
     	    
     	</RelativeLayout>
 
