--- a/Phone/main/res/layout/register_forgot_type_select.xml
+++ b/Phone/main/res/layout/register_forgot_type_select.xml
@@ -24,8 +24,8 @@
         android:cacheColorHint="#00000000">
     </ListView>
         
-    <include layout="@layout/need_help_footer"/>
+    <include layout="@layout/old_general_need_help_footer" />
 
-    <include layout="@layout/copyright_footer"/>
+    <include layout="@layout/old_general_copyright_footer" />
 
 </RelativeLayout>
