--- a/Phone/main/res/layout/login_locked_out.xml
+++ b/Phone/main/res/layout/login_locked_out.xml
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout 
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/login_bkgd" >
-
-    <include layout="@layout/discover_banner"/>
-
+    android:background="@drawable/login_bkgd">
+    
+    <include layout="@layout/old_general_discover_banner" />
+    
     <LinearLayout
         android:id="@+id/linearLayout1"
         android:layout_width="294dp"
         android:layout_height="240dp"
         android:layout_centerInParent="true"
+        android:layout_below="@+id/title_image"
         android:layout_marginTop="32dp"
         android:background="@drawable/rounded_table_corners_shape"
         android:orientation="vertical">
         
-        <include layout="@layout/card_icon_and_login_label"/>
+        <include layout="@layout/old_general_card_icon_login_label" />
 
         <TableRow
             android:id="@+id/error_row"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/error_text_view"
@@ -43,6 +43,6 @@
         android:background="@drawable/login_box_reflection"
         android:orientation="vertical" />
 
-    <include layout="@layout/copyright_footer"/>
+    <include layout="@layout/old_general_copyright_footer" />
 
 </RelativeLayout>
