--- a/Phone/main/res/layout/strongauth_page.xml
+++ b/Phone/main/res/layout/strongauth_page.xml
@@ -163,7 +163,7 @@
     	    android:layout_height="70dp"
     	    android:layout_below="@+id/account_security_continue_button" >
 
-   			<include layout="@layout/copyright_footer"/>
+   			<include layout="@layout/old_general_copyright_footer"/>
     	    
     	</RelativeLayout>
         
