Added fixes for defects regarding a user who was not strong auth enrolled - they will be redirected to an error page to tell them to sign up for strong auth with their computer. Fixed the confirmation screen so that very long email addresses fit on the screen properly.

--- a/Phone/main/res/values/dimens.xml
+++ b/Phone/main/res/values/dimens.xml
@@ -2,7 +2,7 @@
 <resources>
     <dimen name="content_padding">8dp</dimen>
     <dimen name="light_text_size">12sp</dimen>
-    
+    <dimen name="very_light_text_size">10sp</dimen>
     <!-- Navigation Menu -->
     <dimen name="nav_menu_shadow_width">15dp</dimen>
     <dimen name="nav_menu_offset">48dp</dimen>
