--- a/Phone/main/res/layout/account_info_confirm.xml
+++ b/Phone/main/res/layout/account_info_confirm.xml
@@ -95,7 +95,7 @@
                 android:text="@string/account_info_confirm_id_placeholder_text"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@color/black"
-                android:textSize="@dimen/light_text_size" 
+                android:textSize="@dimen/very_light_text_size" 
                 android:textStyle="bold"/>
             
             <TextView
@@ -109,21 +109,21 @@
                 android:text="@string/email_placeholder"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@color/black"
-                android:textSize="@dimen/light_text_size"
+                android:textSize="@dimen/very_light_text_size"
                 android:textStyle="bold" />
             
             <TextView
                 android:id="@+id/account_info_confirm_account_stars_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
+                android:layout_marginLeft="4dp"
                 android:layout_alignBaseline="@id/account_info_confirm_account_title_label"
                 android:layout_toRightOf="@id/account_info_confirm_account_title_label"
                 android:paddingTop="4dp"
                 android:text="@string/account_info_confirm_account_stars_text"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@color/black"
-                android:textSize="@dimen/light_text_size"
+                android:textSize="@dimen/very_light_text_size"
                 android:textStyle="bold" />
 
             <TextView
@@ -137,7 +137,7 @@
                 android:text="@string/account_info_confirm_account_text"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@color/black"
-                android:textSize="@dimen/light_text_size"
+                android:textSize="@dimen/very_light_text_size"
                 android:textStyle="bold" />
             
 			<TextView
