--- a/Phone/main/res/layout/register_create_credentials.xml
+++ b/Phone/main/res/layout/register_create_credentials.xml
@@ -180,12 +180,21 @@
             android:textColor="@color/black"
             android:textSize="@dimen/light_text_size" />
 
+        <TextView
+            android:id="@+id/account_info_id_pass_error_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/account_info_two_pass_info_label"
+            android:text="@string/invalid_value"
+            android:textColor="@color/red"
+            android:visibility="gone" />
+        
         <EditText
             android:id="@+id/account_info_two_pass_field"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/account_information_input_info_label"
-            android:layout_below="@+id/account_info_two_pass_info_label"
+            android:layout_below="@+id/account_info_id_pass_error_label"
             android:ems="32"
             android:imeOptions="actionNext"
             android:inputType="textPassword"
