--- a/Phone/main/res/layout/section_account_summary_landing.xml
+++ b/Phone/main/res/layout/section_account_summary_landing.xml
@@ -12,15 +12,16 @@
         android:background="#e8eced"
         android:paddingBottom="40dp">
         
-        <!-- sub header items -->
+        
         
     </LinearLayout>
     
     <ListView 
         android:id="@+id/account_summary_items"
         android:layout_width="match_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="15dp"
+        android:layout_marginTop="5dp"
         android:background="#ffffff"/>
 
 </LinearLayout>
