--- a/Phone/main/res/layout/push_manage_save_item.xml
+++ b/Phone/main/res/layout/push_manage_save_item.xml
@@ -4,21 +4,21 @@
     android:layout_height="match_parent"
     android:orientation="horizontal" 
     android:background="@color/white"
-    android:padding="14px">
+    android:padding="7dp">
     
     <Button
         android:id="@+id/notificaiton_save_button"
         android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
 		android:text="@string/save_changes"
-		android:textSize="28sp"
+		android:textSize="14sp"
 		android:textColor="@color/white"
 		android:textStyle="bold"
-		android:paddingTop="15dip"
-		android:paddingBottom="15dip"
+		android:paddingTop="7dip"
+		android:paddingBottom="7dip"
 		android:paddingLeft="@dimen/orange_button_left_right_padding"
 		android:paddingRight="@dimen/orange_button_left_right_padding"
-		android:layout_marginRight="20dip"
+		android:layout_marginRight="10dip"
    		android:background="@drawable/orange_button"
    		android:onClick="savePreferences"/>
     
@@ -27,10 +27,10 @@
         android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/terms_text"
-   		android:textColor="@color/field_copy"
+   		android:textColor="@color/blue_link"
    		android:gravity="center_vertical"
    		android:layout_alignParentTop="true"
-   		android:textSize="28dip"
+   		android:textSize="14dip"
    		android:layout_toRightOf="@+id/notificaiton_save_button"
    		android:layout_alignBottom="@+id/notificaiton_save_button"/>
 
