--- a/Phone/main/res/layout/push_manage_toggle_item.xml
+++ b/Phone/main/res/layout/push_manage_toggle_item.xml
@@ -4,15 +4,16 @@
     android:layout_height="wrap_content"
     android:id="@+id/notifcation_alert_toggle" 
     android:background="@color/white"
-    android:padding="28dip">
+    android:padding="14dip">
     
     <ImageView
         android:id="@+id/text_toggle_view"
-        android:layout_width="40dip"
-        android:layout_height="40dip"
+        android:layout_width="20dip"
+        android:layout_height="20dip"
         android:padding="5dip"
         android:background="@drawable/gray_gradient_square"
-    	android:layout_marginLeft="5dip"/>
+        android:src="@drawable/transparent_square"
+    	android:layout_marginLeft="5dip"/> 
     
     <TextView
         android:id="@+id/text_enable_text"
@@ -22,20 +23,20 @@
     	android:text="@string/text"
     	android:textColor="@color/title"
     	android:textStyle="bold"
-    	android:textSize="28dip"
+    	android:textSize="14dip"
     	android:padding="0dip"
     	android:gravity="center"/>
     
     <ImageView
         android:id="@+id/push_toggle_view"
-        android:layout_width="40dip"
-        android:layout_height="40dip"
+        android:layout_width="20dip"
+        android:layout_height="20dip"
         android:padding="5dip"
         android:src="@drawable/white_check_mark"
         android:layout_toRightOf="@+id/text_toggle_view"
         android:layout_alignTop="@+id/text_toggle_view"
         android:background="@drawable/black_gradient_square"
-        android:layout_marginLeft="52dip"/>
+        android:layout_marginLeft="26dip"/>
     
     <TextView
         android:id="@+id/push_enable_text"
@@ -46,10 +47,10 @@
     	android:text="@string/push_alerts"
     	android:textColor="@color/title"
     	android:textStyle="bold"
-    	android:textSize="28dip"
+    	android:textSize="14dip"
     	android:padding="0dip"
     	android:gravity="center"
-    	android:layout_marginLeft="24dip"/>
+    	android:layout_marginLeft="12dip"/>
 
 	<TextView
 	    android:id="@+id/header" 
@@ -58,10 +59,10 @@
 		android:text="Title, if you see this it messed up"
 		android:textColor="@color/title"
 		android:textStyle="bold"
-		android:textSize="28dip"
+		android:textSize="14dip"
 		android:layout_toRightOf="@+id/push_enable_text"
 		android:layout_alignTop="@+id/text_toggle_view"
-		android:layout_marginLeft="60dip"/>
+		android:layout_marginLeft="30dip"/>
 	
 	<TextView
 	    android:id="@+id/sub_header"
@@ -71,5 +72,5 @@
     	android:layout_below="@+id/header"
     	android:textColor="@color/field_copy"
     	android:text="Sub Header, if you see this it messed up"
-    	android:textSize="28dip"/>
+    	android:textSize="14dip"/>
 </RelativeLayout>
