--- a/Phone/main/res/values/strings_push_notification.xml
+++ b/Phone/main/res/values/strings_push_notification.xml
@@ -17,6 +17,8 @@
     <string name="maximize_your_rewards_title">Maximize Your Rewards</string>
     <string name="show_notification_list">+</string>
     <string name="hide_notification_list">-</string>
+    <string name="push_progress_registration_loading">Loading...</string>
+    <string name="push_progress_get_title">Discover</string>
     
     <string name="notifcation_terms_and_condtions_header">Mobile Reminders, Fraud Alerts and Push Alerts Terms of Use</string>
     <string name="notification_terms_agreement">By signing up to receive Mobile Reminders and/or Fraud Alerts (“Text Messages”) or Push Alerts (“Push Alerts”), you agree to the following Terms of Use. By accessing or using Text Messages or Push Alerts, you agree to be bound by these Terms and all terms incorporated by reference.  If you do not agree to these Terms, do not sign up for or use Text Messages or Push Alerts.  DFS means Discover Products Inc. and its affiliates."</string>
