--- a/Phone/main/res/layout/login_start.xml
+++ b/Phone/main/res/layout/login_start.xml
@@ -1,124 +1,126 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	style="@style/BlackTheme"  >
-	
-	<RelativeLayout
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content" 
+	    android:layout_height="match_parent" 
  	    android:focusable="true" 
-		android:focusableInTouchMode="true">
-	    
-	    <include layout="@layout/old_general_discover_banner" />
+		android:focusableInTouchMode="true"
+		style="@style/OrangeTheme">
 	
 	    <LinearLayout
 	        android:id="@+id/linearLayout1"
 	        android:layout_width="294dp"
 	        android:layout_height="wrap_content"
 	        android:layout_centerInParent="true"
-	        android:layout_below="@+id/title_image"
-	        android:layout_marginTop="32dp"
 	        android:background="@drawable/rounded_table_corners_shape"
 	        android:orientation="vertical" >
-	        
-	        <include layout="@layout/old_general_card_icon_login_label" />
-	
-	        <TableRow
-	            android:id="@+id/error_row"
-	            android:layout_width="match_parent"
-	            android:layout_height="wrap_content" >
-	
-	            <TextView
-	                android:id="@+id/error_text_view"
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:textColor="@color/red" />
-	
-	        </TableRow>
-	
-	        <RelativeLayout
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content">
-	
-	            <EditText
-	                android:id="@+id/username"
-	                android:layout_width="match_parent"
-	                android:layout_height="wrap_content"
-	                android:ems="10"
-	                android:hint="@string/username_placeholder"
-	                android:imeOptions="actionNext"
-	                android:inputType="textNoSuggestions"
-	                android:maxLines="@integer/MAX_INPUT_LINES"
-	                android:textColor="@color/black">
 
-	            </EditText>
-	
-	            <EditText
-	                android:id="@+id/password"
-	                android:layout_width="match_parent"
-	                android:layout_height="wrap_content"
-	                android:layout_below="@id/username"
-	                android:ems="10"
-	                android:hint="@string/password_placeholder"
-	                android:inputType="textPassword"
-	                android:maxLines="@integer/MAX_INPUT_LINES"
-	                android:textColor="@color/black"/>
-	
-	        </RelativeLayout>
-	
-	        <LinearLayout
-	            android:id="@+id/remember_user_row"
-	            android:layout_width="match_parent"
-	            android:layout_height="wrap_content"
-	            android:layout_weight="0" >
-	
-	            <Button
-	                android:id="@+id/button2"
-	                android:layout_width="16dp"
-	                android:layout_height="wrap_content"
-	                android:layout_weight="1"
-	                android:visibility="invisible" />
-	
-	            <TextView
-	                android:id="@+id/textView1"
+	        <RelativeLayout
+          	        android:layout_height="wrap_content"
+          	        android:layout_width="wrap_content">
+
+	            <ImageView
+	                android:id="@+id/discoverLogo"
 	                android:layout_width="wrap_content"
 	                android:layout_height="wrap_content"
-	                android:layout_weight="1"
+	                android:layout_marginTop="16dp"
+	                android:src="@drawable/discover_logo" 
+	                android:background="@color/black"
+	                android:layout_centerHorizontal="true"/>
+	            
+		    	<TextView
+		            android:id="@+id/error_text_view"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:textColor="@color/red"
+		            android:layout_below="@+id/discoverLogo"
+		            android:visibility="gone" />
+
+		        <TextView
+		            android:id="@+id/user_id_label"
+		            android:typeface="sans"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:layout_marginTop="24dp"
+		            android:layout_below="@+id/error_text_view"
+		            android:text="@string/user_id"
+		            android:textAppearance="?android:attr/textAppearanceMedium"
+		            android:textColor="@color/title" 
+		            android:textStyle="bold"/>
+	
+		        <EditText
+		            android:id="@+id/username_field"
+		            android:layout_width="match_parent"
+		            android:layout_height="48dp"
+		            android:layout_below="@+id/user_id_label"
+		            android:ems="10"
+		            android:hint="@string/username_placeholder"
+		            android:imeOptions="actionNext"
+		            android:inputType="textNoSuggestions"
+		            android:maxLines="@integer/MAX_INPUT_LINES"
+		            android:textColor="@color/black" 
+		            android:background="@drawable/plain_edit_text"/>
+					
+		        <TextView
+		            android:id="@+id/password_label"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:layout_below="@+id/username_field"
+		            android:text="@string/password"
+		            android:layout_marginTop="14dp"
+		            android:layout_marginRight="14dp"
+		            android:textAppearance="?android:attr/textAppearanceMedium" 
+		            android:textColor="@color/title"
+		            android:textStyle="bold"/>
+		        
+		        <TextView
+		            android:id="@+id/hide_password_label"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:layout_toRightOf="@+id/password_label"
+		            android:layout_alignBaseline="@+id/password_label"
+		            android:text="@string/hide"
+		            android:textColor="@color/blue"/>
+	
+		        <EditText
+		            android:id="@+id/password_field"
+		            android:layout_width="match_parent"
+		            android:layout_height="48dp"
+		            android:layout_below="@+id/password_label"
+		            android:ems="10"
+		            android:hint="@string/password_placeholder"
+		            android:inputType="textPassword"
+		            android:maxLines="@integer/MAX_INPUT_LINES"
+		            android:textColor="@color/black" 
+		            android:background="@drawable/plain_edit_text"/>
+	
+	            <TextView
+	                android:id="@+id/remember_user_id_label"
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content"
+	                android:layout_marginTop="17dp"
+	                android:layout_below="@+id/password_field"
+	                android:layout_toLeftOf="@+id/remember_user_id_button"
 	                android:text="@string/remember_user_id" />
 	
-	            <ToggleButton
-	                android:id="@+id/toggle_button_save_user_id"
-	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:layout_weight="0"
-	                android:paddingRight="16dp"
-	                android:textOff="No"
-	                android:textOn="Yes" />
-	        </LinearLayout>
-	
-	        <TableRow
-	            android:id="@+id/login_button_row"
-	            android:layout_width="match_parent"
-	            android:layout_height="wrap_content"
-	            android:layout_marginTop="16dp"
-	            android:layout_weight="0" >
-	
-	            <Button
-	                android:id="@+id/button1"
-	                android:layout_width="0dp"
-	                android:layout_height="wrap_content"
-	                android:layout_weight=".4"
-	                android:clickable="false"
-	                android:longClickable="false"
-	                android:visibility="invisible"/>
+	            
+	            <ImageView
+			        android:id="@+id/remember_user_id_button"
+			        android:layout_width="25dip"
+			        android:layout_height="25dip"
+			     	android:layout_alignParentRight="true"
+			     	android:layout_marginTop="14dp"
+			     	android:layout_below="@+id/password_field"
+			        android:padding="5dip"
+			        android:onClick="toggleCheckBox"
+			        android:background="@drawable/gray_gradient_square"
+			        android:src="@drawable/transparent_square"
+			    	android:layout_marginLeft="5dip"/>
 	
 	            <TextView
 	                android:id="@+id/register_text"
 	                android:layout_width="0dp"
 	                android:layout_height="30dp"
 	                android:layout_gravity="center_vertical"
-	                android:layout_weight=".35"
 	                android:clickable="true"
 	                android:gravity="center_vertical"
 	                android:onClick="registerNewUser"
@@ -126,51 +128,89 @@
 	                android:textAppearance="?android:attr/textAppearanceSmall"
 	                android:textColor="@color/blue"
 	                android:textSize="@dimen/light_text_size" />
-	
-	            <ImageView
-	                android:id="@+id/imageView2"
-	                android:layout_width="0dp"
-	                android:layout_height="wrap_content"
-	                android:layout_gravity="center_vertical"
-	                android:layout_weight=".05"
-	                android:contentDescription="@string/image_description"
-	                android:src="@drawable/blue_arrow_small" />
-	
+
 	            <Button
 	                android:id="@+id/login_button"
-	                android:layout_width="0dp"
+	                android:layout_width="180dp"
 	                android:layout_height="wrap_content"
-	                android:layout_weight=".4"
-	                android:text="@string/login_button_text" />
-	        </TableRow>
-	
-	            <TextView
-	                android:id="@+id/forgot_uid_or_pass_text"
+	                android:layout_marginTop="24dp"
+	                android:text="@string/login_button_text" 
+	                android:layout_below="@+id/remember_user_id_button"
+	                android:background="@drawable/orange_button"
+	                android:textColor="@color/white"
+	                android:textStyle="bold"
+	                android:layout_centerHorizontal="true"/>
+			<LinearLayout
+			    	android:id="@+id/goto_row"
+			    	android:layout_below="@+id/login_button"
 	                android:layout_width="wrap_content"
-	                android:layout_height="wrap_content"
-	                android:layout_gravity="right"
-	                android:clickable="true"
-	                android:layout_weight="1"
-	                android:layout_marginTop="8dp"
-	                android:paddingBottom="8dp"
-	                android:text="@string/forgot_id_or_pass_label"
-	                android:textAppearance="?android:attr/textAppearanceSmall"
-	                android:textColor="@color/blue" />
-	
-	    </LinearLayout>
-	    
-	    <RelativeLayout
-	        android:layout_width="match_parent"
-    	    android:layout_height="100dp"
-    	    android:layout_marginTop="64dp"
-    	    android:layout_below="@+id/linearLayout1">
-	        
-	        <include layout="@layout/old_general_copyright_footer" />
-	        
-	    </RelativeLayout>
-	
+	                android:layout_height="wrap_content" 
+	                android:layout_marginTop="14dp"
+	                android:layout_centerHorizontal="true">
+	                
+			    <TextView
+		            android:id="@+id/go_to_label"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:clickable="true"
+		            android:text="Go to:"
+		            android:textColor="@color/title" />
 
+			    <ImageView
+			        android:id="@+id/card_check_mark"
+			        android:layout_width="wrap_content"
+			        android:layout_height="wrap_content"
+			        android:src="@drawable/black_check_mark" />
+				
+				<TextView
+		            android:id="@+id/go_to_card_label"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:clickable="true"
+		            android:text="Card"
+		            android:textColor="@color/title" />
+				
+				<TextView
+		            android:id="@+id/divider"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:clickable="true"
+		            android:text="|"
+		            android:textColor="@color/title" />
+				
+				<TextView
+		            android:id="@+id/go_to_bank_label"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:clickable="true"
+		            android:text="Bank"
+		            android:textColor="@color/title" />
+	            </LinearLayout>
+				
+
+		        <TextView
+		            android:id="@+id/forgot_uid_or_pass_text"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+					android:layout_below="@+id/goto_row"
+					android:layout_centerHorizontal="true"
+		            android:layout_marginTop="14dp"
+		            android:clickable="true"
+		            android:paddingBottom="8dp"
+		            android:text="@string/forgot_id_or_pass_text"
+		            android:textAppearance="?android:attr/textAppearanceSmall"
+		            android:textColor="@color/blue" />
 	
-	</RelativeLayout>
+				<TextView
+			        android:id="@+id/copyright_textview"
+			        android:layout_width="wrap_content"
+			        android:layout_height="wrap_content"
+			        android:layout_centerHorizontal="true"
+			        android:layout_marginTop="14dp"
+			        android:layout_below="@+id/forgot_uid_or_pass_text"
+			        android:text="@string/discover_copyright_text" />
+	        </RelativeLayout>
+	        
+	    </LinearLayout>
+</RelativeLayout>
 	
-</ScrollView>
