--- a/Phone/main/res/layout/old_general_discover_banner.xml
+++ b/Phone/main/res/layout/old_general_discover_banner.xml
@@ -7,8 +7,9 @@
         android:id="@+id/title_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
         android:contentDescription="@string/image_description"
+        android:layout_marginTop="14dp"
+        android:layout_marginBottom="40dp"
         android:src="@drawable/discover_logo" />
 
 </merge>
