--- a/Phone/main/res/values/styles.xml
+++ b/Phone/main/res/values/styles.xml
@@ -21,12 +21,12 @@
     <style name="AppTheme.NoTitleBar" parent="Theme.Sherlock.NoActionBar">
     </style>
     
-    <style name="BlackTheme">
+    <style name="OrangeTheme">
         <item name="android:background">@drawable/login_bkgd</item>
     </style>
 
     <style name="WhiteTheme">
-        <item name="android:background">@drawable/gradient_bg</item>
+        <item name="android:background">@drawable/light_gray_bkgrd</item>
         <item name="android:paddingBottom">@dimen/content_padding</item>
         <item name="android:paddingLeft">@dimen/content_padding</item>
         <item name="android:paddingRight">@dimen/content_padding</item>
