--- a/Phone/main/res/values/dimens.xml
+++ b/Phone/main/res/values/dimens.xml
@@ -15,6 +15,7 @@
     <dimen name="groups_of_elements_padding">20dp</dimen>
     <dimen name="call_to_actions_padding">15dp</dimen>
     <dimen name="orange_button_left_right_padding">30dp</dimen>
+    <dimen name="orange_button_margin_top">40dp</dimen>
     
     <!-- Discover Font Sizes -->
     <dimen name="title_max">27sp</dimen>
