--- a/Commons/main/res/layout/custom_edit_text.xml
+++ b/Commons/main/res/layout/custom_edit_text.xml
@@ -21,8 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_alignParentRight="true"
-        android:src="@drawable/green_check" />
+        android:layout_alignParentRight="true"/>
     
 
     
