--- a/Phone/main/res/layout/custom_edit_text.xml
+++ b/Phone/main/res/layout/custom_edit_text.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal" 
-    android:background="@drawable/green_test_box">
+    android:orientation="horizontal" >
 
    
     <EditText
@@ -20,8 +19,7 @@
         android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="0"
-        android:src="@drawable/green_check" />
+        android:layout_weight="0" />
     
 
     
