--- a/Commons/main/res/values/strings_push_notification.xml
+++ b/Commons/main/res/values/strings_push_notification.xml
@@ -30,6 +30,7 @@
     <string name="push_alerts_are_available">Push Alerts Are Now Available</string>
     <string name="push_alerts_are_available_text">You can now sign up to have important account updates and reminders sent directly to your phone. Tap on Manage Alerts below to select what alerts you would like to recieve.</string>
     <string name="manage_alerts">Manage Alerts</string>
+    <string name="account_home">Account Home</string>
     
     <string name="notifcation_terms_and_condtions_header">Mobile Reminders, Fraud Alerts and Push Alerts Terms of Use</string>
     <string name="notification_terms_agreement">By signing up to receive Mobile Reminders and/or Fraud Alerts (“Text Messages”) or Push Alerts (“Push Alerts”), you agree to the following Terms of Use. By accessing or using Text Messages or Push Alerts, you agree to be bound by these Terms and all terms incorporated by reference.  If you do not agree to these Terms, do not sign up for or use Text Messages or Push Alerts.  DFS means Discover Products Inc. and its affiliates."</string>
